# memory

LatestVersions/jens220920/jens_repair V2.4/data/: 8hex2.m3d  8hexd1.m3d  8hexd3.m3d  cs4r6.m3d  hs4def01rep015_jens1000.m3d  hs4def1.m3d  hs4sup_def1.m3d  hs4sup_def2.m3d  oneHex.off  oneHexValid.m3d
LatestVersions/jens220920/jens_repair V2.4/src/: CMakeLists.txt  Hexahedron.cpp  Hexahedron.h  Main.h  Metric.h  MetricJR.h  MetricJens.h  Prism.h  Pyramid.cpp  Pyramid.h  Quality.cpp  Quality.h  QualityWorking.cpp  Quality_bkp.cpp  Quality_bkp.h  Services.h
LatestVersions/jens220920/jens_repair V2.4/src/math/: Array2.h  ArrayTools.h  ContainerTools.cpp  ContainerTools.h  GeoCalc.cpp  GeoCalc.h  List.h  Matrix.cpp  PolyMatrix.cpp  Polynom.cpp  Polynom.h  Size.h  SparseMatrix.cpp  Vector.h
LatestVersions/jens220920/src/: Element.h  Hexahedron.cpp  Hexahedron.h  Main.cpp  Main.h  Prism.h  Pyramid.h  Quality.cpp  Quality.h  Tetrahedron.h
LatestVersions/jens_repair V2.4/data/: 8hexd2.m3d  hex.m3d  hex1.m3d  hs4def01.m3d  hs4def01_badHex.m3d  hs4def01rep01_jrN1000.m3d  oneHex.m3d  oneHexValid.off  output8hexd1p.m3d
LatestVersions/jens_repair V2.4/data/lastTesting/: output8hexdv1.m3d
LatestVersions/jens_repair V2.4/data/repair.zip/: hs4def01rep01_jens1000.m3d
LatestVersions/jens_repair V2.4/src/: Element.cpp  Element.h  Face.h  Main.cpp  Metric.cpp  MetricJR.cpp  MetricJens.cpp  Point3D.cpp  Point3D.h  Prism.cpp  Quality.cpp  Quality.h  QualityWorking.h  Tetrahedron.cpp  Tetrahedron.h
LatestVersions/jens_repair V2.4/src/math/: Array1.cpp  Array1.h  Array2.cpp  Defs.h  (+15 more)
(+2 files in other folders)
